tests/reject/explicit_count.hi
fn empty() -> [$T]:
    return []T
fn main():
    xs := empty$(int, str)
    println(str(len(xs)))
